-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 7.0.1
-
None
-
-
b1eadd3bc6 (qt-creator/qt-creator/8.0) b1eadd3bc6 (qt-creator/tqtc-qt-creator/8.0)
After having issues where my mouse cursor disappears and moving it won't get it back, I searched around Jira and found QTCREATORBUG-23103. Although it may not be the cause of my bug, it could be, so I tried disabling the feature mentioned in the comments, but it has no effect on macOS; the cursor is always hidden while typing.
- relates to
-
QTCREATORBUG-23103 Vanished cursor when typing
-
- Reported
-